automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>Your Title Goes Here</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Giuliana Carballo-Parker</title>
   </head>
   <body>
-    <!-- Design Your Site Here! -->
+<h1>Giuliana Carballo-Parker</h1>
+<h2> This is all about me with random fun facts about anything I know about!</h2>
+
   </body>
 </html>
